# CExamples

./: dnstest.c  test.c  testfun.c
test_zlog/: Makefile  hello.c  log.conf
testmq/mq/: CMakeLists.txt
testmq/mq/src/: testmq.c
testmq/myactivemq/: build2.sh  client.cpp  consumer.cpp  producer.cpp
testmq/myzmq/: build.sh  hwclient  hwclient.c  hwserver  hwserver.c  myzmq.c
testmq/pcap-mt/: CMakeLists.txt
testmq/pcap-mt/src/: main.c
testpcap/: Makefile  testpcap.c
testpcre/: testpcre.c  testpcre1.c  testpcre2.c
testtcp/: Makefile  tcp_server.c  udp_client.c  udp_server.c
testthread/: Makefile  multicore.c  multicpu.c  multiprocess.c  multiprocess1.c  multithreads.c  run.sh
